Risolti problemi sonarqube